--- a/globalStyles.css
+++ b/globalStyles.css
@@ -18,7 +18,7 @@
     left: 0;
     background-color: var(--white);
     height: 100%;
-    width: 40px;
+    width: 20px;
     z-index: 2;
     transition: .25s ease;
 }
@@ -29,7 +29,7 @@
     right: 0;
     background-color: var(--white);
     height: 100%;
-    width: 40px;
+    width: 20px;
     z-index: 2;
     transition: .25s ease;
 }
@@ -39,7 +39,7 @@
     top: 0;
     left: 0;
     background-color: var(--white);
-    height: 40px;
+    height: 20px;
     width: 100%;
 
     color: var(--black);
@@ -57,7 +57,7 @@
     bottom: 0;
     left: 0;
     background-color: var(--white);
-    height: 40px;
+    height: 20px;
     width: 100%;
     z-index: 2;
     transition: .25s ease;
@@ -114,35 +114,73 @@ body{
 }
 
 /*NAVBAR RIGHT SIDE*/
-.nav-wrapper
+.menu
+{
+    position: absolute;
+    cursor: pointer;
+    top: 10%;
+    right: 6%;
+    z-index: 2;
+}
+.menu-line
+{
+    height: 2px;
+    width: 35px;
+    background: white;
+    margin: 10px;
+    transition: .15s ease;
+}
+.menu-line:nth-child(1) 
+{
+    transform: translateY(7px) translateX(-7px) rotate(45deg);
+}
+.menu-line:nth-child(2)
+{
+    transform:  translateY(-7px) translateX(7px) rotate(45deg);
+}
+.menu:hover .menu-line:nth-child(1)
+{
+    background: var(--blue);
+    transform:  translateX(2px);
+}
+.menu:hover .menu-line:nth-child(2)
+{
+    background: var(--blue);
+    transform: translateX(2px);
+}
+.menu-line.close
+{
+    background: var(--blue);
+}
+.menu-line.close:nth-child(1)
+{
+    transform: translateY(7px) translateX(-7px) rotate(45deg);
+}
+.menu-line.close:nth-child(2)
+{
+    transform:  translateY(-7px) translateX(7px) rotate(45deg);
+}
+
+.nav-links
 {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-}
-.nav-inner
-{
-    font-size: 1.5rem;
+    margin-top: 3rem;
+    list-style: none;
+    transition: .2s ease;
 }
 .nav-inner ul
 {
     list-style: none;
     display: flex;
 }
-.menu-line
-{
-    height: 2px;
-    max-width: 35px;
-    background-color: var(--blue);
-    margin-top: 9px;
-    transition: .15s ease;
-}
 .current-page a
 {
     color: var(--blue);
     transition: .3s ease;
 }
+
+
 /*FOOTER LINKS*/
 a
 {
@@ -204,15 +242,15 @@ a:hover
     color: white;
 }
 
-/*SCROLLBAR*/
-/*PROGRESS BAR*/
+
+/*--------------------PROGRESS BAR--------------------*/
 .progress-container
 {
     width: 2px;
     height: 0%;
     position: fixed;
     top: 40px;
-    right: 17px;
+    right: 9px;
     background: var(--black);
     transition: .2s ease;
     z-index: 3;
@@ -291,6 +329,10 @@ a:hover
 /*----------MEDIA QUERIES----------*/
 @media only screen and (max-width: 552px)
 {
+    body
+    {
+        overflow-x: hidden;
+    }
     .top, .bottom, .left, .right
     {
         display: none;
@@ -306,9 +348,63 @@ a:hover
     {
         font-size: 1.5rem;
     }
-    .spacer
+    
+    .footer-margin
     {
-        display: none;
+        margin-top: 10rem;
+        text-align: center;
+    }
+    .links
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    } 
+    /*MENU BAR MEDIA QUERIES*/
+    .nav-links
+    {
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: var(--black);
+        flex-direction: column;
+
+        height: 100vh;
+        width: 100%;
+    }
+    .nav-links li a
+    {
+        color: var(--black);
+    }
+    /*WORKS PAGE MEDIA QUERIES*/
+    .category
+    {
+        font-size: 1rem;
+        text-align: center;
+    }
+    .class-type
+    {
+        font-size: 4rem;
+        letter-spacing: 0px;
+        text-align: center;
+    }
+    .whitespace
+    {
+        bottom: 0;
+        left: 0;
+        background-color: var(--blue);
+        height: 2px;
+        width: 75%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 1rem auto 1rem auto;
+    }
+    /*CONTACT PAGE MEDIA QUERIES*/
+    .email
+    {
+        font-size: 1.3rem;
     }
 }
 /*----------END OF MEDIA QUERIES----------*/
@@ -341,7 +437,7 @@ a:hover
     transition: .25s ease;
 }
 
-/*PAGE TRANSITION*/
+/*------------------------PAGE TRANSITION------------------------*/
 .loading-screen 
 {
     position: relative;
@@ -364,3 +460,8 @@ a:hover
     z-index: 10;
     pointer-events: none;
 }
+/*------------------------END OF PAGE TRANSITION------------------------*/
+
+/*------------------------MENU BAR------------------------*/
+
+/*------------------------END OF MENU BAR------------------------*/
