--- a/medp331/class_6_midterm/styles.css
+++ b/medp331/class_6_midterm/styles.css
@@ -1,5 +1,142 @@
 *
 {
-    margin: 0;
     padding: 0;
+    margin: 0;
 }
+
+/*-------------------NAVBAR-------------------*/
+.header-name
+{
+    font-size: 3rem;
+    font-family: 'Fira Code', sans-serif;
+    font-weight: 300;
+    letter-spacing: 5px;
+}
+.navbar
+{
+    display: flex;
+    flex-direction: row;
+}
+.search-conatiner
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.search
+{
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #17141d;
+    font-size: 1.2rem;
+}
+.button-search
+{
+    border: none;
+    background: transparent;
+}
+
+.pokemon-information
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+#name
+{
+    text-transform: capitalize;
+}
+.evolutions
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.regions
+{
+    display: flex;
+}
+.filter-button
+{
+    flex: 0 0 auto;
+    padding: 5px 15px;
+    border-radius: 50px;
+    border: 1px solid #4d4d4d;
+    background: #4d4d4d;
+    text-transform: capitalize;
+    margin-right: 20px;
+    color: #f0f0f0;
+    font-size: .9rem;
+    cursor: pointer;
+    transition: .2s ease;
+}
+.filter-button:active
+{
+    background: #c9c9c9;
+    color: #2c2c2c;
+}
+/*-------------------CENTER CONTENT-------------------*/
+.content-container
+{
+    display: grid;
+    grid-template-columns: repeat(5, 20%);
+    place-items: center;
+    row-gap: 4rem;
+}
+.card
+{
+    width: 300px;
+    height: 250px;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.25s ease;
+}
+.card:hover 
+{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.pokemon-name
+{
+    text-transform: capitalize;
+}
+.types
+{
+    display: flex;
+    justify-content: space-evenly;
+    list-style: none;
+}
+
+@media only screen and (max-width: 741px)
+{
+    .content-container
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .card
+    {
+        margin-top: 2.5rem;
+    }
+}
+
+/*-------------------SCROLLBAR-------------------*/
+::-webkit-scrollbar
+{
+    width: 0;
+}
+.scrollbar
+{
+    position: fixed;
+    top: 0;
+    right: 0;
+}
+.scrollbar-tracker
+{
+    background-color: red;
+    width: 9px;
+    height: 1009px;
+}
+
