updated with card styling

--- a/medp331/class_6_midterm/styles.css
+++ b/medp331/class_6_midterm/styles.css
@@ -3,6 +3,10 @@
     padding: 0;
     margin: 0;
 }
+body
+{
+    font-family: 'Poppins', sans-serif;
+}
 
 /*-------------------NAVBAR-------------------*/
 .header-name
@@ -77,6 +81,7 @@
     background: #c9c9c9;
     color: #2c2c2c;
 }
+
 /*-------------------CENTER CONTENT-------------------*/
 .content-container
 {
@@ -92,6 +97,9 @@
     text-align: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.25s ease;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
 }
 .card:hover 
 {
@@ -101,11 +109,87 @@
 {
     text-transform: capitalize;
 }
+.pokemon-img
+{
+    width: 150px;
+    height: 1500px;
+}
 .types
 {
     display: flex;
-    justify-content: space-evenly;
-    list-style: none;
+    justify-content: space-between;
+    text-transform: capitalize;
+}
+.green
+{
+    background-color: aqua;
+}
+/*-------------------CARD POPUP STYLING-------------------*/
+.popup
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: #efefef;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+}
+.popup-card
+{
+    background-color: #fff;
+    height: 80vh;
+    width: 60vw;
+    display: flex;
+    flex-direction: column;
+}
+.card-image
+{
+    width: 300px;
+    height: 300px;
+}
+.close-button
+{
+    position: absolute;
+    top: 80px; 
+    right: 80px;
+    border: none;
+}
+/*-------------------MEDIA QUERIES-------------------*/
+@media only screen and (max-width: 1426px)
+{
+    .content-container
+    {
+        display: grid;
+        grid-template-columns: repeat(4, 25%);
+        place-items: center;
+        row-gap: 4rem;
+    }
+}
+
+@media only screen and (max-width: 1246px)
+{
+    .content-container
+    {
+        display: grid;
+        grid-template-columns: repeat(3, 33%);
+        place-items: center;
+        row-gap: 4rem;
+    }
+}
+
+@media only screen and (max-width: 931px)
+{
+    .content-container
+    {
+        display: grid;
+        grid-template-columns: repeat(2, 50%);
+        place-items: center;
+        row-gap: 4rem;
+    }
 }
 
 @media only screen and (max-width: 741px)
@@ -120,23 +204,14 @@
     {
         margin-top: 2.5rem;
     }
+    .regions
+    {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: column;
+    }
 }
 
 /*-------------------SCROLLBAR-------------------*/
-::-webkit-scrollbar
-{
-    width: 0;
-}
-.scrollbar
-{
-    position: fixed;
-    top: 0;
-    right: 0;
-}
-.scrollbar-tracker
-{
-    background-color: red;
-    width: 9px;
-    height: 1009px;
-}
 
