--- a/medp331/class_6_midterm/styles.css
+++ b/medp331/class_6_midterm/styles.css
@@ -137,14 +137,31 @@ body
     justify-content: center;
     align-items: center;
     z-index: 2;
+    transition: .2s ease;
 }
 .popup-card
 {
     background-color: #fff;
-    height: 80vh;
-    width: 60vw;
+    height: 90vh;
+    width: 30vw;
+    padding: 1rem;
+    border-radius: 19px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.25s ease;
+    overflow-y: scroll;
+}
+.card-content
+{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.card-title
+{
+    text-transform: capitalize;
+    text-align: left;
+    font-weight: 600;
 }
 .card-image
 {
@@ -157,6 +174,29 @@ body
     top: 80px; 
     right: 80px;
     border: none;
+}
+.pokemon-name-container
+{
+    background-color: antiquewhite;
+}
+.pokemon-information
+{
+    display: flex;
+    flex-direction: column;
+}
+.type
+{
+    text-transform: capitalize;
+    text-align: center;
+    font-weight: 800;
+}
+.move
+{
+    text-transform: capitalize;
+}
+.stat
+{
+    text-transform: capitalize;
 }
 /*-------------------MEDIA QUERIES-------------------*/
 @media only screen and (max-width: 1426px)
@@ -214,4 +254,17 @@ body
 }
 
 /*-------------------SCROLLBAR-------------------*/
-
+.scroll-bar
+{
+    position: relative;
+    float: right;
+    width: 5px;
+    height: 0;
+    z-index: 3;
+    background-color: #17141d;
+    border-radius: 20px;
+}
+.popup-card::-webkit-scrollbar
+{
+    width: 0;
+}
