--- a/medp331/class_6_midterm/styles.css
+++ b/medp331/class_6_midterm/styles.css
@@ -7,25 +7,11 @@ body
 {
     font-family: 'Poppins', sans-serif;
 }
-
-/*-------------------NAVBAR-------------------*/
-.header-name
-{
-    font-size: 3rem;
-    font-family: 'Fira Code', sans-serif;
-    font-weight: 300;
-    letter-spacing: 5px;
-}
-.navbar
-{
-    display: flex;
-    flex-direction: row;
-}
+/*-------------------AUTOCOMPLETE/SEARCH FUNCTIONALITY-------------------*/
 .search-conatiner
 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    position: relative;
+    display: inline-block;
 }
 .search
 {
@@ -39,17 +25,44 @@ body
     border: none;
     background: transparent;
 }
-
-.pokemon-information
+.autocomplete-elements
+{
+    position: absolute;
+    border: 1px solid #2c2c2c;
+    border: none;
+    z-index: 10;
+    top: 100%;
+    left: 0;
+    right: 0;
+}
+.autocomplete-elements div
+{
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    border-bottom: 1px solid #d4d4d4;
+}
+.autocomplete-elements div:hover
+{
+    background-color: #e9e9e9;
+}
+.search-container-active
+{
+    background-color: dodgerblue;
+    color: #fff;
+}
+/*-------------------NAVBAR-------------------*/
+.header-name
+{
+    font-size: 3rem;
+    font-family: 'Fira Code', sans-serif;
+    font-weight: 300;
+    letter-spacing: 5px;
+}
+.navbar
 {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-#name
-{
-    text-transform: capitalize;
+    flex-direction: row;
 }
 .evolutions
 {
@@ -67,7 +80,7 @@ body
     flex: 0 0 auto;
     padding: 5px 15px;
     border-radius: 50px;
-    border: 1px solid #4d4d4d;
+    border: 3px solid #4d4d4d;
     background: #4d4d4d;
     text-transform: capitalize;
     margin-right: 20px;
@@ -76,7 +89,7 @@ body
     cursor: pointer;
     transition: .2s ease;
 }
-.filter-button:active
+.filter-button:hover
 {
     background: #c9c9c9;
     color: #2c2c2c;
@@ -250,10 +263,9 @@ body
     }
     .regions
     {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: repeat(3, 33%);
+        row-gap: 1rem;
     }
 }
 
