added evolution chain to pokemons

--- a/medp331/class_6_midterm/styles.css
+++ b/medp331/class_6_midterm/styles.css
@@ -259,6 +259,11 @@ span
     font-style: italic;
     float: none;
 }
+.evolutions
+{
+    display: flex;
+    flex-direction: column;
+}
 /*-------------------MEDIA QUERIES-------------------*/
 @media only screen and (max-width: 1426px)
 {
