--- a/medp331/class_6_midterm/styles.css
+++ b/medp331/class_6_midterm/styles.css
@@ -285,10 +285,15 @@ span
     float: left;
     text-align: left;
 }
+/*****END OF EVOLUTION*****/
 .habitat
 {
     float: none;
     text-transform: capitalize;
+}
+.fa-arrow-right
+{
+    font-size: 1.9rem;
 }
 /*-------------------MEDIA QUERIES-------------------*/
 @media only screen and (max-width: 1426px)
