--- a/medp331/class_6_midterm/styles.css
+++ b/medp331/class_6_midterm/styles.css
@@ -163,6 +163,7 @@ body
     border-radius: 19px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.25s ease;
+    overflow-y: scroll;
 }
 .card-content
 {
@@ -200,6 +201,7 @@ body
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
 }
 .pokemon-information
 {
@@ -219,10 +221,10 @@ body
     display: flex;
     justify-content: space-evenly;
 }
-.moves-set-container
+.moves-row
 {
     display: flex;
-    flex-direction: column;
+    width: 100%;
 }
 .type, .ability, .stat, .move-title
 {
@@ -232,6 +234,14 @@ body
 .move
 {
     text-transform: capitalize;
+}
+.move-type
+{
+    float: right;
+}
+.col-md-8
+{
+    width: 100%;
 }
 .whitespace
 {
@@ -270,6 +280,7 @@ span
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100%;
 }
 .evolution-container
 {
@@ -284,6 +295,11 @@ span
 {
     float: left;
     text-align: left;
+}
+.evolution-img
+{
+    height: 150px;
+    width: 150px;
 }
 /*****END OF EVOLUTION*****/
 .habitat
@@ -304,6 +320,16 @@ span
         grid-template-columns: repeat(4, 25%);
         place-items: center;
         row-gap: 4rem;
+    }
+    .card-image
+    {
+        width: 150px;
+        height: 150px;
+    }
+    .evolution-img
+    {
+        height: 100px;
+        width: 100px;
     }
 }
 
@@ -365,6 +391,20 @@ span
     .evolutions
     {
         flex-direction: column;
+    }
+    .card-image
+    {
+        width: 300px;
+        height: 300px;
+    }
+    .fa-arrow-right
+    {
+        transform: rotate(90deg);
+    }
+    .evolution-img
+    {
+        height: 150px;
+        width: 150px;
     }
 }
 
