--- a/medp331/class_6_midterm/styles.css
+++ b/medp331/class_6_midterm/styles.css
@@ -147,7 +147,7 @@ body
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: #efefef;
+    background-color: rgba(244, 244, 244, 1);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -164,6 +164,7 @@ body
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.25s ease;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 .card-content
 {
@@ -312,7 +313,7 @@ span
     font-size: 1.9rem;
 }
 /*-------------------MEDIA QUERIES-------------------*/
-@media only screen and (max-width: 1426px)
+@media only screen and (max-width: 1476px)
 {
     .content-container
     {
