--- a/medp331/class_6_midterm/styles.css
+++ b/medp331/class_6_midterm/styles.css
@@ -108,7 +108,7 @@ body
     width: 300px;
     height: 300px;
     text-align: center;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 8px 8px 16px 0 rgba(0,0,0,0.2);
     transition: 0.25s ease;
     display: flex;
     align-items: center;
@@ -118,7 +118,7 @@ body
 }
 .card:hover 
 {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 16px 16px 16px 0 rgba(0,0,0,0.2);
 }
 .pokemon-name
 {
@@ -158,7 +158,7 @@ body
 {
     background-color: #fff;
     height: 90vh;
-    width: 80vw;
+    width: 50vw;
     padding: 1rem;
     border-radius: 19px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -166,6 +166,16 @@ body
     overflow-y: scroll;
     overflow-x: hidden;
 }
+.close-button
+{
+    position: absolute;
+    top: 40px; 
+    right: 40px;
+    font-size: 1.7rem;
+    border: none;
+    background: none;
+}
+/****CARD CONTENT STYLING****/
 .card-content
 {
     display: flex;
@@ -186,15 +196,6 @@ body
 {
     width: 300px;
     height: 300px;
-}
-.close-button
-{
-    position: absolute;
-    top: 40px; 
-    right: 40px;
-    font-size: 1.7rem;
-    border: none;
-    background: none;
 }
 .basic-information
 {
@@ -235,10 +236,6 @@ body
 .move
 {
     text-transform: capitalize;
-}
-.move-type
-{
-    float: right;
 }
 .col-md-8
 {
