--- a/medp331/class_6_midterm/styles.css
+++ b/medp331/class_6_midterm/styles.css
@@ -139,6 +139,23 @@ body
 {
     margin: 5px;
 }
+.scroll-top
+{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 70px;
+    height: 70px;
+    background-color: #2c2c2c;
+    color: #d4d4d4;
+    font-size: 2.6rem;
+    border-radius: 50%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: .2s ease;
+}
 /*-------------------CARD POPUP STYLING-------------------*/
 .popup
 {
