--- a/medp331/class_10/views/home.handlebars
+++ b/medp331/class_10/views/home.handlebars
@@ -6,42 +6,10 @@
 </div>
 
 
-{{> about}}
+{{!-- {{> about}} --}}
+{{> banner}}
 
-<div class="container-fluid works-container">
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-            <span class="number">001</span>
-            <h1 class="work">Pokey.dex</h1>
-        </div>
-        <div class="col-md-1"></div>
-    </div>
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-            <span class="number">002</span>
-            <h1 class="work">Media 331</h1>
-        </div>
-        <div class="col-md-1"></div>
-    </div>
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-            <span class="number">003</span>
-            <h1 class="work">Media 285</h1>
-        </div>
-        <div class="col-md-1"></div>
-    </div>
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-10">
-            <span class="number">004</span>
-            <h1 class="work">CSCI 335</h1>
-        </div>
-        <div class="col-md-1"></div>
-    </div>
-</div>
+{{> works}}
 
 <div class="contact container-fluid">
     <div class="row">
@@ -54,7 +22,11 @@
     <div class="row">
         <div class="col-md"></div>
         <div class="col-md-12">
-            <p class="email"><a href="mailto:jason.wong47@myhunter.cuny.edu">Send an Email</a></p>
+            <a class = "menu-item email" href="mailto:jason.wong47@myhunter.cuny.edu">
+                <div>
+                    <span class = "menu-item-text email-text">Send an Email</span>
+                </div>
+            </a>
         </div>
         <div class="col-md"></div>
     </div>
