--- a/medp331/class_10/views/partials/banner.handlebars
+++ b/medp331/class_10/views/partials/banner.handlebars
@@ -1,9 +1,8 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-12">
-            <span class ="banner-text">PORT/FOLIO</span>
-            <span class ="banner-text">PORT/FOLIO</span>
-            <span class ="banner-text">PORT/FOLIO</span>
-        </div>
+<div class = "scroll">
+    <div>
+        <span>Port/folio</span>
+        <span>Port/folio</span>
+        <span>Port/folio</span>
+        
     </div>
 </div>
