--- a/medp331/class_10/views/partials/nav.handlebars
+++ b/medp331/class_10/views/partials/nav.handlebars
@@ -1,8 +1,8 @@
 <div class="container-fluid bottom-nav">
   <ul class = "links-list">
     <li class="list-link"><a href = "#">Home</a></li>
-    <li class="list-link"><a href = "../works.handlebars">Works</a></li>
+    <li class="list-link"><a href = "./works.handlebars">Works</a></li>
     <li class="list-link"><a href= "#">About</a></li>
-    <li class="list-link"><a href= "#contact">Contact</a></li>
+    <li class="list-link"><a href= "#">Contact</a></li>
   </ul>
 </div>
